demo/manifests/4-redirects-and-rewrites/url-rewrite/httproute-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-urlrewrite
  namespace: httpbin
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["httpbin.apps.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /urlrewrite
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /headers
      backendRefs:
        - name: httpbin
          port: 80
